--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -217,7 +217,7 @@
                             </div>
                             
                             <div class="row">
-                                <div style="margin-bottom:5px" t-if="not onlymainnet" class="col-12">
+                                <div style="margin-bottom:5px" class="col-12">
                                     <a href="https://latinchaintest9869.pinet.com/index-nopopup" target="_blank" class="col-12 btn btn-link mb-2 o_default_snippet_text">Go to LatinChain Testnet</a>
                                 </div>
                             </div>
