--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -2784,7 +2784,7 @@
                     <div class="container" style="text-align:center;" t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup">
                         <!-- LatinChain Ad responsive 2 -->
                         
-                        <!--<ins class="adsbygoogle"
+                        <ins class="adsbygoogle"
                              style="display:block"
                              data-ad-client="ca-pub-2334449220276386"
                              data-ad-slot="6625994850"
@@ -2794,7 +2794,19 @@
                              (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                         
-                        <br/>-->
+                        <br/>
+                        
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-2334449220276386"
+                             data-ad-slot="6625994850"
+                             data-ad-format="auto"
+                             data-full-width-responsive="true"></ins>
+                        <script>
+                             (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                        
+                        <br/>
                         
                         <div id="taboola-below-article-thumbnails"></div>
                         <script type="text/javascript">
