--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -270,7 +270,7 @@
                             <div style="text-align:center;" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
                                 <!-- LatinChain Ad responsive 2 -->
                                 
-                                <!--<ins class="adsbygoogle"
+                                <ins class="adsbygoogle"
                                      style="display:block"
                                      data-ad-client="ca-pub-2334449220276386"
                                      data-ad-slot="9525388880"
@@ -292,7 +292,7 @@
                                      (adsbygoogle = window.adsbygoogle || []).push({});
                                 </script>
                                 
-                                <br/>-->
+                                <br/>
                                 
                                 <div id="taboola-below-article-thumbnails"></div>
                                 <script type="text/javascript">
