--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_sudoku.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_sudoku.xml
@@ -684,6 +684,18 @@
                              (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
                         
+                        <br/>
+                        
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-2334449220276386"
+                             data-ad-slot="9525388880"
+                             data-ad-format="auto"
+                             data-full-width-responsive="true"></ins>
+                        <script>
+                             (adsbygoogle = window.adsbygoogle || []).push({});
+                        </script>
+                        
                         <!--<br/>
                         
                         <div id="taboola-below-article-thumbnails"></div>
