--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_modal.xml
@@ -625,7 +625,7 @@
                             <br/>
                             <div style="margin-bottom:5px; padding:5px; width: 100%; text-align: center" class="border-gradient-rounded">
                                 <div style="margin-bottom:5px" class="border-bottom">
-                                    <h5 translate="no">LatinChain Token foundations</h5>
+                                    <h5 translate="no">LatinChain Token foundations (Token not launched yet on Mainnet)</h5>
                                 </div>
                                 <div style="margin-bottom:5px;">
                                     <strong>
