--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_sudoku.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_sudoku.xml
@@ -43,7 +43,8 @@
                     <script src="https://sdk.minepi.com/pi-sdk.js"></script>
                     <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/pidoku/functions.js?v=1.162"></script>
                     
-                    <script t-if="mainnet in ['Testnet ON', 'Testnet OFF']" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
+                    <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF']" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
+                    -->
                                         
                     <!--<script type="text/javascript">
                       window._taboola = window._taboola || [];
@@ -178,7 +179,7 @@
                     <div class="container text-center" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
                         
                         <!-- LatinChain Ad responsive -->
-                        
+                        <!--
                         <br/>
                         <ins class="adsbygoogle"
                              style="display:block"
@@ -189,7 +190,7 @@
                         <script>
                              (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
-                        
+                        -->
                         
                         <!--<br/>
                         <div id="taboola-mid-article-thumbnails"></div>
@@ -673,7 +674,7 @@
                     
                     <div class="container text-center" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
                         <!-- LatinChain Ad responsive 2 -->
-                        
+                        <!--
                         <ins class="adsbygoogle"
                              style="display:block"
                              data-ad-client="ca-pub-2334449220276386"
@@ -695,7 +696,7 @@
                         <script>
                              (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
-                        
+                        -->
                         <!--<br/>
                         
                         <div id="taboola-below-article-thumbnails"></div>
