--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_radioforus.xml
@@ -36,8 +36,8 @@
                     
                     <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_radioforus.js?v=1.148"></script>
                     
-                    <script t-if="mainnet in ['Testnet ON', 'Testnet OFF']" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
-                    
+                    <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF']" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
+                    -->
                     <!--<script type="text/javascript">
                       window._taboola = window._taboola || [];
                       _taboola.push({article:'auto'});
@@ -167,7 +167,7 @@
                     <input type="hidden" id="a_ads_val_3" t-att-value="a_ads_3"/>-->
                     <div class="container" style="text-align:center" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
                         <!-- LatinChain Ad responsive -->
-                        
+                        <!--
                         <br/>
                         <ins class="adsbygoogle"
                              style="display:block"
@@ -178,7 +178,7 @@
                         <script>
                              (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
-                        
+                        -->
                         
                         <!--<br/>
                         
@@ -436,7 +436,7 @@
                     <br/><br/>
                     <div class="container" style="text-align:center" t-if="mainnet in ['Testnet ON', 'Testnet OFF']">
                         <!-- LatinChain Ad responsive 2 -->
-                        
+                        <!--
                         <ins class="adsbygoogle"
                              style="display:block"
                              data-ad-client="ca-pub-2334449220276386"
@@ -458,6 +458,8 @@
                         <script>
                              (adsbygoogle = window.adsbygoogle || []).push({});
                         </script>
+                        -->
+
                         <!--<br/>
                         
                         <div id="taboola-below-article-thumbnails"></div>
