--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates.xml
@@ -371,6 +371,11 @@
                                         <div style="margin-top:5px" class="justify-content-center">
                                             <input t-att-value="amount" id="pi_donate" name="pi_donate" type="number" min="0" step="0.01" class="numeric-decimal form-control" style="display: none;" lang="en-US"/>
                                             <button id="button_click" name="button_click" class="col-12 btn btn-success fw-bold text-black border-success" disabled="true" style="border: 2px solid; margin-bottom: 5px;"><div><i class="fa-solid fa-money-bill-transfer"></i></div><div>Donate to unblock with <span t-esc="amount" /> Pi for 30 days from today</div><div style="font-size:80%;" t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">Earn Latin points (<t t-esc="amount_latin_pay" />)</div></button>
+                                            
+                                            <div style="margin-bottom:5px;">
+                                                <a href="https://promote.mexc.com/r/U2hkpZK0" target="_blank" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-right-left"></i></div><div style="font-size:100%;" translate="no">JOIN MEXC AND TRADE PI</div><div style="font-size:80%;">Pi KYB ready</div></a>
+                                            </div>
+                                            
                                             <div class="p-3 mb-2 bg-secondary bg-gradient text-white rounded col-12" style="filter: contrast(100%) !important;">
                                               <input class="form-check-input" type="checkbox" value="" id="acceptConditions"/>
                                               <label class="form-check-label" for="acceptConditions">
