--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1396,7 +1396,8 @@
                                 </span>
                             </div>
                             
-                            <div class="row justify-content-center text-center p-3 mb-2 bg-info bg-gradient text-white rounded show_pi_ad_automatic" style="filter: contrast(100%) !important; margin-left: 1px; margin-right: 1px; display: none;">
+                            <!--show_pi_ad_automatic-->
+                            <div class="row justify-content-center text-center p-3 mb-2 bg-info bg-gradient text-white rounded" style="filter: contrast(100%) !important; margin-left: 1px; margin-right: 1px; display: none;">
                               <input class="form-check-input" type="checkbox" id="pi_ad_automatic" disabled="true" checked="true" />
                               <label class="form-check-label" for="pi_ad_automatic">
                                 <br/>
