--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -944,7 +944,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.705"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.706"></script>
                     
                     <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     -->
@@ -1410,7 +1410,7 @@
                                 </span>
                             </div>
                             
-                            <div class="row justify-content-center text-center p-3 mb-2 bg-info bg-gradient text-white rounded show_pi_ad_automatic" style="filter: contrast(100%) !important; margin-left: 1px; margin-right: 1px">
+                            <!--<div class="row justify-content-center text-center p-3 mb-2 bg-info bg-gradient text-white rounded show_pi_ad_automatic" style="filter: contrast(100%) !important; margin-left: 1px; margin-right: 1px">
                               <input class="form-check-input" type="checkbox" id="pi_ad_automatic" disabled="true" checked="true" />
                               <label class="form-check-label" for="pi_ad_automatic">
                                 <br/>
@@ -1421,7 +1421,7 @@
                                     (1 Pi Ad / <t t-esc="pi_ad_hours" />h)
                                 </div>
                               </label>
-                            </div>
+                            </div>-->
                             
                             <div id="accordionExchange" style="margin-bottom:5px" t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']">
                               <div class="card">
