--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1394,6 +1394,9 @@
                                 <!--<a t-if="mainnet in ['Testnet ON', 'Testnet OFF']" href="https://ecosystem.pinet.com/apps/63d38f4fa9a2245a1c0ef9cf" target="_blank" class="href-external col-12 btn font-weight-bold text-white" style="border: 2px solid; background-color: #703d92; border-color: #703d92;"><div style=""><i class="fa-solid fa-cubes-stacked"></i></div><div style="font-size:100%;">Stake Pi to Boost Rank of LatinChain Testnet</div></a>
                                 -->
                             </div>
+                            <div style="margin-bottom:5px">
+                                <a href="https://x.com/i/status/1999919404910273018" target="_blank" class="col-12 btn btn-link mb-2 o_default_snippet_text"><div style=""><i class="fa-solid fa-cubes-stacked"></i></div><div style="font-size:100%;">More info about staking, clicking here</div></a>
+                            </div>
                             <div style="margin-bottom:5px;">
                                 <a href="https://promote.mexc.com/r/U2hkpZK0" target="_blank" class="href-external col-12 btn btn-outline-success font-weight-bold text-black border-success" style="border: 2px solid;"><div style=""><i class="fa-solid fa-right-left"></i></div><div style="font-size:100%;" translate="no">JOIN MEXC AND TRADE PI</div><div style="font-size:80%;">Pi KYB ready</div></a>
                             </div>
