--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_rules.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_rules.xml
@@ -39,7 +39,7 @@
                                 <t t-set="mainnet_text" t-value="'test.latin-chain.com (Testnet)'"/>
                                 <t t-set="mainnet_alt_text" t-value="'latin-chain.com (Mainnet)'"/>
                             </t>
-                            <h3>We have deleted the prizes. None prize will be paid by now, but you can play anytime!. And we are incorporating the price of the market for Pi.</h3>
+                            <h3>None prize will be paid by now, but you can play anytime!. And we are incorporating the price of the market for Pi.</h3>
                             <div class="accordion" id="accordionPanelsStayOpenExample">
                               <div class="accordion-item">
                                 <h2 class="accordion-header" id="panelsStayOpen-headingA">
